--- a/src/componentes/footer/Footer.css
+++ b/src/componentes/footer/Footer.css
@@ -1,3 +1,46 @@
-footer{
-background-color: pink;
+footer {
+    background-color: #ffadf4;
+    color: rgb(235, 104, 176);
+    padding: 35px;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 70vh;
+    font-family: fantasy;
+  }
+ 
+  .footer-section {
+    flex: 1;
+    margin-right: 20px;
+    margin-left: 200px;
+  }
+  .Contato:hover{
+    text-decoration: underline;
+  }
+ 
+  ul {
+    list-style: none;
+    padding: 0;
+    font-family: fantasy;
+  }
+ 
+  a {
+    color: white;
+    text-decoration: none;
+    letter-spacing: 1px;
+   
+  }
+ 
+  a:hover {
+    text-decoration: underline;
+  }
+  p{
+    color: white;
+  }
+  .barbie-img2{
+   
+    width:20vw;
+    height: auto;
+}
+li{
+    padding-bottom: 10px;
 }
